--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,4 +18,6 @@ spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.Ca
 
 spring.profiles.active=dev
 
+jwt.secretKey=${JWT_SECRETKEY:VERY-VERY-secret-default-key}
+jwt.expiration=${JWT_EXPIRATION:3600000
 
