--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,5 +19,9 @@ spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.Ca
 spring.profiles.active=dev
 
 jwt.secretKey=${JWT_SECRETKEY:VERY-VERY-secret-default-key}
-jwt.expiration=${JWT_EXPIRATION:3600000
+
+# jwt standard : UnixTime / Unit : sec.
+jwt.expiration.access=${JWT_EXPIRATION:1200}
+jwt.expiration.refresh=${JWT_EXPIRATION:259200}
+
 
